<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fachada"
            type="com.example.golliatfinances.vistas.VMFachada" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".activitys.MainActivity">

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/icon"
            android:elevation="5dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/icons"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/buscarDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:inputType="number"
                    app:met_autoValidate="true"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="DNI"
                    app:met_helperText="@string/ingrese_el_dni_del_cliente"
                    app:met_maxCharacters="8"
                    app:met_minCharacters="8" />


                <Button
                    android:id="@+id/buttonBuscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{v->fachada.buscarPersona(v)}"
                    android:text="@string/buscar" />

                <TextView
                    android:id="@+id/textEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:stateListAnimator="@android:anim/fade_in"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Estado" />


                <Button
                    android:id="@+id/buttonCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:enabled="false"
                    android:onClick="@{v->fachada.gestionarCliente(v)}"

                    android:text="@string/gestionar_cliente" />

                <Button
                    android:id="@+id/buttonCrearCredito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{v->fachada.crearCredito(v)}"
                    android:enabled="false"
                    android:text="@string/crear_credito" />

                <Button
                    android:id="@+id/buttonPagarCuota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:enabled="false"
                    android:text="@string/pagar_cuota" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/primary" />

                <Button
                    android:id="@+id/buttonPlanes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/gestionar_planes" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>