<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="VMCrearCredito"
            type="com.example.golliatfinances.vistas.VMCrearCredito" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.CrearCredito">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/crear_nuevo_credito"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="ExtraText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/modalidad"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerModalidad"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:entries="@array/modalidades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="ExtraText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/plan_de_referencia"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerPlanes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:entries="@array/planes" />
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/crearCreditPorcentajeInteres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:inputType="number"
                app:met_autoValidate="true"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="Interes"
                app:met_helperText="Porcentaje del interes mensual" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/crearCreditPorcentajeGastos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:inputType="number"
                app:met_autoValidate="true"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="Gastos administrativos"
                app:met_helperText="Porcentaje del total como gasto administrativo" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/crearCreditMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:inputType="number"
                app:met_autoValidate="true"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="Monto total"
                app:met_helperText="Monto total que desea el cliente"
                app:met_maxCharacters="5" />

            <Button
                android:id="@+id/buttonGenerarCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:text="@string/generar_credito"
                android:onClick="@{v->VMCrearCredito.notificarCredito(v)}"


                android:textColor="@color/icons" />

            <TextView
                android:id="@+id/datosDelCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonConfirmarCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/primary"
                android:text="@string/guardar_credito"
                android:textColor="@color/icons" />

        </LinearLayout>
    </ScrollView>

</layout>
